# eurydice_test_framework

./: .gitignore  LICENSE  README.md  pyproject.toml  versions.txt
eurydice_test_framework/core/database/tables/: __init__.py  tests_run.py
eurydice_test_framework/core/management/: __init__.py  command_line_handler.py  directory_handler.py  tests_handler.py
eurydice_test_framework/core/management/command_groups/: __init__.py  base_group.py  database.py  project.py  report.py  service.py  tests.py
eurydice_test_framework/core/management/commands/: __init__.py  add_service.py  init.py  init_db.py
eurydice_test_framework/core/management/errors/: command_parse_exception.py
eurydice_test_framework/core/wrappers/: docker.py
eurydice_test_framework/src/: base_api.py  config.py
eurydice_test_framework/src/database/: handler.py
eurydice_test_framework/templates/: __init__.py  api.py  config_yaml.py  dashboard_json.py  dashboard_yaml.py  datasource.py  docker_compose_yaml.py  env.py  test.py
eurydice_test_ramework/core/management/: command_line_handler.py
eurydice_test_ramework/core/management/commands/: add_service.py  base_command.py  init.py
test_framework/: __main__.py
test_framework/core/management/: command_line_handler.py  directory_handler.py
test_framework/core/management/commands/: __init__.py  add_service.py  init.py
