[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["eurydice_test_ramework"]


[project]
version = "0.0.0"
name = "eurydice_test_framework"
dependencies = ["pytest"]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
eurydice = "eurydice_test_ramework.core.management:command_line_handler"

[project.urls]
Homepage = "https://github.com/korneyaitmatoff/eurydice_test_framework"